[package]
name = "rust-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
cargo-watch = "8.5.3"
tokio = {version="1.42.0", features = ["full"]}
watch = "0.2.3"
serde = { version="1", features = ["derive"]}
serde_json = "1"
tower-http = { version="0.4", features=["fs"]}
tower-cookies = "0.9"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
